--- a/services.html
+++ b/services.html
@@ -109,7 +109,7 @@
 
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-8 text-sm font-semibold tracking-wider text-slate-600">
-                <a href="services.html" class="text-brand-blue transition-colors">SERVICES</a>
+                <a href="index.html" class="text-brand-blue transition-colors">HOME</a>
                 <a href="process.html" class="hover:text-brand-blue transition-colors">THE PROCESS</a>
                 <a href="contact.html" class="px-6 py-2 bg-brand-blue text-white font-bold rounded-lg shadow-md hover:bg-brand-navy transition-all">GET A QUOTE</a>
             </div>
@@ -123,7 +123,7 @@
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu" class="fixed inset-0 bg-white z-40 transform translate-x-full transition-transform duration-300 flex flex-col items-center justify-center gap-8 md:hidden">
             <button id="close-menu" class="absolute top-8 right-8 text-brand-navy"><i data-lucide="x" class="h-8 w-8"></i></button>
-            <a href="services.html" class="text-2xl font-serif font-bold text-brand-blue mobile-link">Services</a>
+            <a href="index.html" class="text-2xl font-serif font-bold text-brand-blue mobile-link">Home</a>
             <a href="process.html" class="hover:text-brand-blue transition-colors mobile-link text-xl font-bold">Our Process</a>
             <a href="contact.html" class="px-8 py-3 bg-brand-blue text-white font-bold rounded-lg mobile-link">Get Started</a>
         </div>
@@ -278,6 +278,36 @@
             </div>
         </div>
     </section>
+    
+    <!-- The Offer Section -->
+    <section class="py-24 bg-white text-white relative overflow-hidden">
+        <div class="absolute top-0 right-0 p-20 opacity-10">
+            <i data-lucide="award" class="h-64 w-64"></i>
+        </div>
+        <div class="max-w-5xl mx-auto px-6 text-center relative z-10 fade-in-section">
+            <div class="inline-flex items-center gap-2 px-4 py-2 bg-brand-blue/20 rounded-full text-brand-accent font-bold text-sm mb-6 border border-brand-accent/30">
+                <i data-lucide="sparkles" class="h-4 w-4"></i> PREMIUM ADDED VALUE
+            </div>
+            <h2 class="text-brand-navy font-serif text-4xl md:text-6xl font-black mb-8">The Current Glass Standard</h2>
+            <p class="text-brand-navy text-xl font-medium mb-12 max-w-3xl mx-auto leading-relaxed">
+                Total clarity includes every detail. We offer a <span class="text-brand-navy border-b-2 border-brand-blue font-bold italic">Free Screen Replacement</span> with every piece of glass we replace.
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
+                <div class="bg-brand-navy/5 p-8 rounded-2xl border border-white/10 transition-colors">
+                    <h4 class="text-brand-accent font-bold mb-3 uppercase tracking-wider text-xs">Modern Mesh</h4>
+                    <p class="text-brand-navy text-sm font-medium">New high-visibility fiberglass mesh that resists UV damage and maintains airflow.</p>
+                </div>
+                <div class="bg-brand-navy/5 p-8 rounded-2xl border border-white/10 transition-colors">
+                    <h4 class="text-brand-accent font-bold mb-3 uppercase tracking-wider text-xs">Custom Fitting</h4>
+                    <p class="text-brand-navy text-sm font-medium">We ensure the screen is perfectly tensioned and secured to the existing frame.</p>
+                </div>
+                <div class="bg-brand-navy/5 p-8 rounded-2xl border border-white/10 transition-colors">
+                    <h4 class="text-brand-accent font-bold mb-3 uppercase tracking-wider text-xs">Total Value</h4>
+                    <p class="text-brand-navy text-sm font-medium">Part of our commitment to leaving your windows better than we found them.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- CTA Section -->
     <section class="py-24 bg-slate-50 relative overflow-hidden">
@@ -306,7 +336,7 @@
             <div>
                 <h4 class="text-brand-navy font-bold mb-6 uppercase tracking-wider text-xs">Quick Links</h4>
                 <ul class="space-y-4 text-slate-500 font-semibold text-sm">
-                    <li><a href="services.html" class="text-brand-blue transition-colors">Services</a></li>
+                    <li><a href="index.html" class="text-brand-blue transition-colors">Home</a></li>
                     <li><a href="process.html" class="hover:text-brand-blue transition-colors">Our Process</a></li>
                     <li><a href="contact.html" class="hover:text-brand-blue transition-colors">Contact Us</a></li>
                 </ul>
