--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     Current <span class="text-gradient">Glass</span>
                 </h1>
                 <p class="text-slate-600 max-w-xl text-lg md:text-xl font-medium mb-10 leading-relaxed">
-                    High-quality premium glass replacement for homes and businesses. We specialize in replacing the glass inside your existing windows—saving you thousands in renovation costs.
+                    High-quality premium glass replacement for home. We specialize in replacing the glass inside your existing windows—saving you thousands in renovation costs.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4">
                     <a href="contact.html" class="px-8 py-4 bg-brand-blue hover:bg-brand-navy text-white font-bold transition-all duration-300 rounded shadow-lg flex items-center justify-center gap-2">
@@ -447,4 +447,5 @@
         }
     </script>
 </body>
+
 </html>
