--- a/process.html
+++ b/process.html
@@ -162,16 +162,16 @@
                 <!-- Step 1 -->
                 <div class="relative grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16 items-center fade-in-section">
                     <!-- Icon Marker -->
-                    <div class="absolute left-8 md:left-1/2 transform md:-translate-x-1/2 -translate-y-1/2 md:translate-y-0 h-4 w-4 bg-white border-4 border-brand-blue rounded-full z-10 hidden md:block"></div>
+                    <div class="absolute left-8 md:left-1/2 transform -translate-x-1/2 -translate-y-1/2 top-6 md:top-1/2 h-4 w-4 bg-white border-4 border-brand-blue rounded-full z-10"></div>
                     
-                    <div class="md:text-right order-2 md:order-1 pl-16 md:pl-0">
+                    <div class="md:text-right order-1 md:order-1 pl-16 md:pl-0">
                         <div class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-brand-blue/10 text-brand-blue mb-4 md:ml-auto md:mr-0">
                             <i data-lucide="phone" class="h-6 w-6"></i>
                         </div>
                         <h3 class="text-3xl font-serif font-bold text-brand-navy mb-3">1. Initial Consultation</h3>
                         <p class="text-slate-600 font-medium leading-relaxed">It starts with a simple call or form submission. We discuss your needs, give you a price estimate, and schedule a time to visit your property.</p>
                     </div>
-                    <div class="order-1 md:order-2 pl-16 md:pl-0">
+                    <div class="order-2 md:order-2 pl-16 md:pl-0">
                         <div class="bg-slate-50 p-8 rounded-2xl border border-slate-100 shadow-sm">
                             <span class="text-xs font-bold text-brand-blue uppercase tracking-widest">What to expect</span>
                             <p class="text-brand-navy font-serif font-bold text-2xl mt-2">Zero pressure. Honest advice.</p>
@@ -181,38 +181,35 @@
 
                 <!-- Step 2 -->
                 <div class="relative grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16 items-center fade-in-section">
-                    <div class="absolute left-8 md:left-1/2 transform md:-translate-x-1/2 h-4 w-4 bg-white border-4 border-brand-blue rounded-full z-10 hidden md:block"></div>
+                    <div class="absolute left-8 md:left-1/2 transform -translate-x-1/2 -translate-y-1/2 top-6 md:top-1/2 h-4 w-4 bg-white border-4 border-brand-blue rounded-full z-10"></div>
 
                     <div class="order-2 pl-16 md:pl-0">
-                        <div class="md:hidden inline-flex items-center justify-center w-12 h-12 rounded-full bg-brand-blue/10 text-brand-blue mb-4">
-                            <i data-lucide="ruler" class="h-6 w-6"></i>
-                        </div>
                         <div class="bg-slate-50 p-8 rounded-2xl border border-slate-100 shadow-sm">
                             <span class="text-xs font-bold text-brand-blue uppercase tracking-widest">What to expect</span>
                             <p class="text-brand-navy font-serif font-bold text-2xl mt-2">Laser-accurate dimensions.</p>
                         </div>
                     </div>
                     <div class="order-1 pl-16 md:pl-0">
-                        <div class="hidden md:inline-flex items-center justify-center w-12 h-12 rounded-full bg-brand-blue/10 text-brand-blue mb-4">
+                        <div class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-brand-blue/10 text-brand-blue mb-4">
                             <i data-lucide="ruler" class="h-6 w-6"></i>
                         </div>
                         <h3 class="text-3xl font-serif font-bold text-brand-navy mb-3">2. Precision Measurement</h3>
-                        <p class="text-slate-600 font-medium leading-relaxed">Our technicians arrive to measure your glass. We assess the glass thickness, tint, and Low-E coating type to match your existing windows perfectly, or upgrade to your preference.</p>
+                        <p class="text-slate-600 font-medium leading-relaxed">Our technicians arrive to measure your glass to the millimeter. We assess the glass thickness, tint, and Low-E coating type to match your existing windows perfectly, or upgrade to your preference.</p>
                     </div>
                 </div>
 
                 <!-- Step 3 -->
                 <div class="relative grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16 items-center fade-in-section">
-                    <div class="absolute left-8 md:left-1/2 transform md:-translate-x-1/2 h-4 w-4 bg-white border-4 border-brand-blue rounded-full z-10 hidden md:block"></div>
+                    <div class="absolute left-8 md:left-1/2 transform -translate-x-1/2 -translate-y-1/2 top-6 md:top-1/2 h-4 w-4 bg-white border-4 border-brand-blue rounded-full z-10"></div>
 
-                    <div class="md:text-right order-2 md:order-1 pl-16 md:pl-0">
+                    <div class="md:text-right order-1 md:order-1 pl-16 md:pl-0">
                         <div class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-brand-blue/10 text-brand-blue mb-4 md:ml-auto md:mr-0">
                             <i data-lucide="factory" class="h-6 w-6"></i>
                         </div>
                         <h3 class="text-3xl font-serif font-bold text-brand-navy mb-3">3. Custom Fabrication</h3>
                         <p class="text-slate-600 font-medium leading-relaxed">We don't cut glass in your driveway. Your double-pane unit (IGU) is manufactured in a climate-controlled facility, sealed with Argon gas for maximum insulation.</p>
                     </div>
-                    <div class="order-1 md:order-2 pl-16 md:pl-0">
+                    <div class="order-2 md:order-2 pl-16 md:pl-0">
                         <div class="bg-slate-50 p-8 rounded-2xl border border-slate-100 shadow-sm">
                             <span class="text-xs font-bold text-brand-blue uppercase tracking-widest">What to expect</span>
                             <p class="text-brand-navy font-serif font-bold text-2xl mt-2">Factory-sealed longevity.</p>
@@ -222,19 +219,16 @@
 
                 <!-- Step 4 -->
                 <div class="relative grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-16 items-center fade-in-section">
-                    <div class="absolute left-8 md:left-1/2 transform md:-translate-x-1/2 h-4 w-4 bg-white border-4 border-brand-blue rounded-full z-10 hidden md:block"></div>
+                    <div class="absolute left-8 md:left-1/2 transform -translate-x-1/2 -translate-y-1/2 top-6 md:top-1/2 h-4 w-4 bg-white border-4 border-brand-blue rounded-full z-10"></div>
 
                     <div class="order-2 pl-16 md:pl-0">
-                        <div class="md:hidden inline-flex items-center justify-center w-12 h-12 rounded-full bg-brand-blue/10 text-brand-blue mb-4">
-                            <i data-lucide="hammer" class="h-6 w-6"></i>
-                        </div>
                         <div class="bg-slate-50 p-8 rounded-2xl border border-slate-100 shadow-sm">
                             <span class="text-xs font-bold text-brand-blue uppercase tracking-widest">What to expect</span>
                             <p class="text-brand-navy font-serif font-bold text-2xl mt-2">Done in hours, not days.</p>
                         </div>
                     </div>
                     <div class="order-1 pl-16 md:pl-0">
-                        <div class="hidden md:inline-flex items-center justify-center w-12 h-12 rounded-full bg-brand-blue/10 text-brand-blue mb-4">
+                        <div class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-brand-blue/10 text-brand-blue mb-4">
                             <i data-lucide="hammer" class="h-6 w-6"></i>
                         </div>
                         <h3 class="text-3xl font-serif font-bold text-brand-navy mb-3">4. Installation & Cleanup</h3>
