--- a/contact.html
+++ b/contact.html
@@ -444,8 +444,8 @@
             btn.disabled = true;
 
             // TODO: REPLACE THESE WITH YOUR ACTUAL SERVICE AND TEMPLATE IDs
-            const serviceID = 'service_x7662r9'; 
-            const templateID = 'template_rjlcrz4';
+            const serviceID = 'service_8402wnk'; 
+            const templateID = 'template_xt3yocc';
 
             emailjs.sendForm(serviceID, templateID, this)
                 .then(() => {
@@ -466,4 +466,5 @@
         });
     </script>
 </body>
+
 </html>
