--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <script type="text/javascript">
        (function(){
           emailjs.init({
-            publicKey: "hEWqsk7ZIVpHoXTYP",
+            publicKey: "AFNHcYovgI2EBnYv0",
           });
        })();
     </script>
@@ -468,3 +468,4 @@
 </body>
 
 </html>
+
