--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </div>
             <h2 class="text-brand-navy font-serif text-4xl md:text-6xl font-black mb-8">The Current Glass Standard</h2>
             <p class="text-brand-navy text-xl font-medium mb-12 max-w-3xl mx-auto leading-relaxed">
-                Total clarity includes every detail. We offer a <span class="text-brand-navy border-b-2 border-brand-blue font-bold italic">Free Screen Replacement</span> with every piece of glass we replace.
+                Total clarity includes every detail. We offer a <span class="text-brand-navy border-b-2 border-brand-blue font-bold italic">Free Screen Replacement</span> with every piece of glass we replace, on elible screen types.
             </p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
                 <div class="bg-brand-navy/5 p-8 rounded-2xl border border-white/10 transition-colors">
@@ -450,6 +450,7 @@
 </body>
 
 </html>
+
 
 
 
