Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/contact.html
+++ b/contact.html
@@ -206,8 +206,8 @@
                                 <!-- Dropdown Menu -->
                                 <div id="dropdown-options" class="hidden absolute top-full left-0 w-full mt-2 bg-white border border-slate-100 rounded-xl shadow-xl z-30 overflow-hidden transform transition-all duration-200 origin-top opacity-0 scale-95 pointer-events-none">
                                     <div class="p-1 max-h-60 overflow-y-auto">
-                                        <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Foggy Window Repair">Foggy Window Repair</div>
-                                        <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Safety / Tempered Glass">Broken Glass</div>
+                                        <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Discolored/Foggy Glass">Discolored/Foggy Glass</div>
+                                        <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Broken Glass">Broken Glass</div>
                                         <div class="px-4 py-3 hover:bg-slate-50 hover:text-brand-blue cursor-pointer rounded-lg transition-colors text-slate-600 font-medium" data-value="Other / General Inquiry">Other / General Inquiry</div>
                                     </div>
                                 </div>
@@ -467,5 +467,6 @@
 </body>
 
 </html>
+
 
 
