--- a/contact.html
+++ b/contact.html
@@ -140,14 +140,14 @@
                                 </div>
 
                                 <!-- Email -->
-                                <div class="flex items-center gap-4 group cursor-pointer p-3 -ml-3 rounded-xl hover:bg-slate-50 transition-all" onclick="copyText('help@current-glass.com', 'Email address')" title="Click to copy">
+                                <div class="flex items-center gap-4 group cursor-pointer p-3 -ml-3 rounded-xl hover:bg-slate-50 transition-all" onclick="copyText('aeyden@current-glass.com', 'Email address')" title="Click to copy">
                                     <div class="h-10 w-10 rounded-full bg-brand-light flex items-center justify-center text-brand-blue group-hover:bg-brand-blue group-hover:text-white transition-all shrink-0">
                                         <i data-lucide="mail" class="h-5 w-5"></i>
                                     </div>
                                     <div>
                                         <p class="text-xs font-bold text-slate-400 uppercase tracking-wide">Email</p>
                                         <div class="flex items-center gap-2">
-                                            <p class="font-bold text-brand-blue group-hover:text-brand-accent transition-colors">help@current-glass.com</p>
+                                            <p class="font-bold text-brand-blue group-hover:text-brand-accent transition-colors">aeyden@current-glass.com</p>
                                             <i data-lucide="copy" class="h-3 w-3 text-slate-400 opacity-0 group-hover:opacity-100 transition-opacity"></i>
                                         </div>
                                     </div>
@@ -252,8 +252,8 @@
 
             <div>
                 <h4 class="text-brand-navy font-bold mb-6 uppercase tracking-wider text-xs">Direct Contact</h4>
-                <div class="cursor-pointer" onclick="copyText('help@current-glass.com', 'Email address')" title="Click to copy">
-                <p class="text-slate-500 font-semibold text-sm mb-2">help@current-glass.com</p>
+                <div class="cursor-pointer" onclick="copyText('aeyden@current-glass.com', 'Email address')" title="Click to copy">
+                <p class="text-slate-500 font-semibold text-sm mb-2">aeyden@current-glass.com</p>
                 </div>
                 <div class="cursor-pointer" onclick="copyText('(385) 287-5896', '(385) 287-5896')" title="Click to copy">
                 <p class="text-brand-blue font-bold text-lg mb-6">(385) 287-5896</p>
