--- a/process.html
+++ b/process.html
@@ -411,8 +411,8 @@
 
             <div>
                 <h4 class="text-brand-navy font-bold mb-6 uppercase tracking-wider text-xs">Direct Contact</h4>
-                <div class="cursor-pointer" onclick="copyText('help@current-glass.com', 'Email address')" title="Click to copy">
-                <p class="text-slate-500 font-semibold text-sm mb-2">help@current-glass.com</p>
+                <div class="cursor-pointer" onclick="copyText('aeyden@current-glass.com', 'Email address')" title="Click to copy">
+                <p class="text-slate-500 font-semibold text-sm mb-2">aeyden@current-glass.com</p>
                 </div>
                 <div class="cursor-pointer" onclick="copyText('(385) 287-5896', '(385) 287-5896')" title="Click to copy">
                 <p class="text-brand-blue font-bold text-lg mb-6">(385) 287-5896</p>
