--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
                     <div class="w-20 h-20 rounded-full bg-white/10 flex items-center justify-center mb-6 border border-white/20">
                         <i data-lucide="home" class="h-10 w-10 text-brand-accent"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-3">No Stucco Damage</h3>
-                    <p class="text-slate-300 leading-relaxed max-w-sm font-medium">We leave your frames in the wall. This means no expensive stucco repairs, no drywall patching, and no repainting needed.</p>
+                    <h3 class="text-xl font-bold mb-3">No Damage</h3>
+                    <p class="text-slate-300 leading-relaxed max-w-sm font-medium">We leave your frames in the wall. This means no expensive stucco repairs, no drywall patching, no trimming, and no repainting needed.</p>
                 </div>
                 <div class="flex flex-col items-center">
                     <div class="w-20 h-20 rounded-full bg-white/10 flex items-center justify-center mb-6 border border-white/20">
@@ -295,7 +295,7 @@
             </div>
             <h2 class="text-brand-navy font-serif text-4xl md:text-6xl font-black mb-8">The Current Glass Standard</h2>
             <p class="text-brand-navy text-xl font-medium mb-12 max-w-3xl mx-auto leading-relaxed">
-                Total clarity includes every detail. We offer a <span class="text-brand-navy border-b-2 border-brand-blue font-bold italic">Free Screen Replacement</span> with every piece of glass we replace, on elible screen types.
+                Total clarity includes every detail. We offer a <span class="text-brand-navy border-b-2 border-brand-blue font-bold italic">Free Screen Mesh Replacement</span> with every piece of glass we replace, on elible screen types.
             </p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
                 <div class="bg-brand-navy/5 p-8 rounded-2xl border border-white/10 transition-colors">
@@ -349,8 +349,8 @@
 
             <div>
                 <h4 class="text-brand-navy font-bold mb-6 uppercase tracking-wider text-xs">Direct Contact</h4>
-                <div class="cursor-pointer" onclick="copyText('help@current-glass.com', 'Email address')" title="Click to copy">
-                <p class="text-slate-500 font-semibold text-sm mb-2">help@current-glass.com</p>
+                <div class="cursor-pointer" onclick="copyText('aeyden@current-glass.com', 'Email address')" title="Click to copy">
+                <p class="text-slate-500 font-semibold text-sm mb-2">aeyden@current-glass.com</p>
                 </div>
                 <div class="cursor-pointer" onclick="copyText('(385) 287-5896', '(385) 287-5896')" title="Click to copy">
                 <p class="text-brand-blue font-bold text-lg mb-6">(385) 287-5896</p>
