--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <div class="relative z-10 max-w-7xl mx-auto px-6 grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
             <div class="text-left fade-in-section">
-                <p class="text-brand-blue tracking-[0.2em] uppercase text-sm mb-4 font-bold">The Best Glass Solution.</p>
+                <p class="text-brand-blue tracking-[0.2em] uppercase text-sm mb-4 font-bold">The Better Glass Solution.</p>
                 <h1 class="text-5xl md:text-7xl text-brand-navy mb-6 leading-tight font-serif font-black">
                     Current <span class="text-gradient">Glass</span>
                 </h1>
