--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </h1>
                 <p class="text-slate-600 max-w-xl text-lg md:text-xl font-medium mb-10 leading-relaxed">
                     Looking for new windows? Don't! <br>
-                    9 times out of 10 you don't need a new window, just a new piece of glass. Let us help you save thousands.
+                    9 times out of 10 you don't need a new window, just a new piece of glass. You could save thousands.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4">
                     <a href="contact.html" class="px-8 py-4 bg-brand-blue hover:bg-brand-navy text-white font-bold transition-all duration-300 rounded shadow-lg flex items-center justify-center gap-2">
