--- a/process.html
+++ b/process.html
@@ -146,7 +146,7 @@
         <div class="relative z-10 max-w-5xl mx-auto px-6 text-center fade-in-section">
             <p class="text-brand-blue tracking-[0.2em] uppercase text-sm mb-4 font-bold">Transparency at Every Step</p>
             <h1 class="text-5xl md:text-7xl text-brand-navy mb-8 leading-tight font-serif font-black">
-                From Foggy to <span class="text-gradient">Flawless.</span>
+                From Broken or Foggy to <span class="text-gradient">Flawless.</span>
             </h1>
             <p class="text-slate-600 max-w-2xl mx-auto text-lg md:text-xl font-medium leading-relaxed">
                 We've refined glass replacement down to a science. No messy construction, no long wait times, and no need to replace your entire window frame.
